refactor: remove verb from path name
