# backend/config/routes.rb
@@ -1,7 +1,7 @@
 Rails.application.routes.draw do
   get "up" => "rails/health#show", as: :rails_health_check
 
-  post "urls/shorten", to: "urls#shorten"
+  post "urls", to: "urls#shorten"
   get "urls", to: "urls#index"
   get "urls/:short_url/analytics", to: "analytics#index"
   get ":short_url", to: "urls#redirect", as: :url_redirect
